--- a/index.html
+++ b/index.html
@@ -410,5 +410,65 @@
             <h3>New Trendy Prints</h3>
         </div>
     </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up For Newsletters</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your email address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="../assets/images/logo.png" alt="">
+            <h4>Contact</h4>
+            <p><strong>Address:</strong> 76, Segun Bagicha, Dhaka-1000</p>
+            <p><strong>Phone:</strong> +09 9352 469 /(+880) 17 1073 3270</p>
+            <p><strong>Hours:</strong> 10:00 - 18:00, Sat - Thu</p>
+            <div class="follow">
+                <h4>Follow us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+            <div class="row">
+                <img src="../assets/images/pay/app.jpg" alt="">
+                <img src="../assets/images/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="../assets/images/pay/pay.png" alt="">
+        </div>
+        <div class="copyright">
+            <p>© 2024, Abhishek Das - HTML CSS Ecommerce Template</p>
+        </div>
+    </footer>
 </body>
 </html>
