Progressing the responsive part for home page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
-        <!-- <div id="mobile">
+        <div id="mobile">
             <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
             <i id="bar" class="fas fa-outdent"></i>
-        </div> -->
+        </div>
     </section>
 
     <section id="hero">
@@ -426,9 +426,9 @@
         <div class="col">
             <img class="logo" src="../assets/images/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong> 76, Segun Bagicha, Dhaka-1000</p>
-            <p><strong>Phone:</strong> +09 9352 469 /(+880) 17 1073 3270</p>
-            <p><strong>Hours:</strong> 10:00 - 18:00, Sat - Thu</p>
+            <p><strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco </p>
+            <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
@@ -467,8 +467,10 @@
             <img src="../assets/images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>© 2024, Abhishek Das - HTML CSS Ecommerce Template</p>
+            <p>© 2024, Tech2 etc - HTML CSS Ecommerce Template</p>
         </div>
     </footer>
+
+    <script src="../assets/js/menu.js"></script>
 </body>
 </html>
