--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/f2.jpg" alt="">
                 <div class="des">
@@ -102,9 +100,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/f3.jpg" alt="">
                 <div class="des">
@@ -121,9 +117,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/f4.jpg" alt="">
                 <div class="des">
@@ -140,9 +134,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/f5.jpg" alt="">
                 <div class="des">
@@ -159,9 +151,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/f6.jpg" alt="">
                 <div class="des">
@@ -178,9 +168,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/f7.jpg" alt="">
                 <div class="des">
@@ -197,9 +185,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container"> 
             <div class="pro">
                 <img src="../assets/images/products/f8.jpg" alt="">
                 <div class="des">
@@ -245,9 +231,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n2.jpg" alt="">
                 <div class="des">
@@ -264,9 +248,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n3.jpg" alt="">
                 <div class="des">
@@ -283,9 +265,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n4.jpg" alt="">
                 <div class="des">
@@ -302,9 +282,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n5.jpg" alt="">
                 <div class="des">
@@ -321,9 +299,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n6.jpg" alt="">
                 <div class="des">
@@ -340,9 +316,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n7.jpg" alt="">
                 <div class="des">
@@ -359,9 +333,7 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
-        </div>
 
-        <div class="pro-container">
             <div class="pro">
                 <img src="../assets/images/products/n8.jpg" alt="">
                 <div class="des">
@@ -426,9 +398,9 @@
         <div class="col">
             <img class="logo" src="../assets/images/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco </p>
-            <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
-            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <p><strong>Address:</strong> 98 United Bhaban, Road 11, Dhaka </p>
+            <p><strong>Phone:</strong> +01 2372 489 /(+880) 01 2345 6789</p>
+            <p><strong>Hours:</strong> 10:00 - 18:00, Sat - Thu</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
@@ -467,7 +439,7 @@
             <img src="../assets/images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>© 2024, Tech2 etc - HTML CSS Ecommerce Template</p>
+            <p>© 2024, Abhishek Das - E_Commerce Project</p>
         </div>
     </footer>
 
